{
    "version": 1,
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "10ec0233-8e25-42e7-8edb-d52bde829a7f",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "9c6ed182-1ca7-41da-8716-c5d2d74d95fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5c7dee6-c73f-43e1-bd39-203ef93e34e9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}